--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Para c
+a.out
+*.swp
+
 # Prerequisites
 *.d
 
@@ -50,3 +54,8 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+.vscode/c_cpp_properties.json
+.vscode/settings.json
+.vscode/tasks.json
+src/
+./vscode
